Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.4
	 * Save:	8
	 * Network:	11

	Android		35
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.4

	main map (luca.map) is now higher resolution (800x500)
	world map (world.map) is now higher resolution (800x500)
	MapEditor can load TEG/JTEG xml maps
	Card Ownership view shows you the cards you own when you dont own the country in Yellow

	Android 35 StackOverflowError in onSaveInstanceState fix
	Android 34 auto.save file fails to fully create on some systems, then the load fails to load it leaving the user with a blank screen
	Android 33 find Closest Country if we are not touching a actual Country
		   if the system kills off the game because of too little mem, the game will then be loaded on next startup
		   do not overlap text in MapStore and Lobby game list
	Android 32 android:installLocation changed from preferExternal to auto as it did not work on some devices (GT-i5500)
		   cards graph added to see number of cards of other players
		   new About screen with advert added
		   keepAlive changed from < FROYO to <= GINGERBREAD_MR1 maybe it will fix the -1 http error
	Android 31 allows human to view mssion at end of game if AI won
		   wakelock added when game screen is open
		   got rid of titlebar in main menu
		   fixed: nullpointer in getting game commands when game is not open

1.1.1.3 (10.03.2013)

	Online Mini Lobby added to FlashGUI and SwingGUI
	Brazilian Portuguese added by Ricardo Gomes Ponce
	much more info added to the Testing tab in SwingGUI
	game.ini has ai.wait property that can be changed
	other game.ini properties work fully now
	MapEditor can detect more errors on missions
	SwingGUI can remember the players you used last time
	new pluggable AI system
	NEW AI BY Steven Hawkins

	Android 30 fixed: do not show old games when re-connect to lobby