@@ -6,7 +6,7 @@ CURRENT VERSION:
 	 * Save:	8
 	 * Network:	11
 
-	Android		35
+	Android		36
 	Flash GUI:	2
 	Swing GUI:	2
 	Simple GUI:	1.1.1.1
@@ -20,6 +20,8 @@ CURRENT VERSION:
 	MapEditor can load TEG/JTEG xml maps
 	Card Ownership view shows you the cards you own when you dont own the country in Yellow
 
+	Android 36 grasshopper update
+		   game opening and hiding at same time/del and load auto.save in different threads fix
 	Android 35 StackOverflowError in onSaveInstanceState fix
 	Android 34 auto.save file fails to fully create on some systems, then the load fails to load it leaving the user with a blank screen
 	Android 33 find Closest Country if we are not touching a actual Country
